@@ -238,6 +238,13 @@ extern "C" {
 #define TBSTYLE_CHECK	2
 #define TBSTYLE_GROUP	4
 #define TBSTYLE_CHECKGROUP	(TBSTYLE_GROUP|TBSTYLE_CHECK)
+#if (_WIN32_IE >= 0x0300)
+#define TBSTYLE_DROPDOWN	8
+#endif
+#if (_WIN32_IE >= 0x0400)
+#define TBSTYLE_AUTOSIZE	16
+#define TBSTYLE_NOPREFIX	32
+#endif
 #define TBSTYLE_TOOLTIPS	256
 #define TBSTYLE_WRAPABLE	512
 #define TBSTYLE_ALTDRAG	1024
