@@ -65,6 +65,8 @@ LAUNCHWIZARD
 LPropCompareProp@8
 LaunchWizard@20
 LpValFindProp@12
+MAPI_NSCP_SynchronizeClient@8
+MAPIAddress@44
 MAPIAdminProfiles
 MAPIAdminProfiles@8
 MAPIAllocateBuffer
@@ -72,18 +74,28 @@ MAPIAllocateBuffer@8
 MAPIAllocateMore
 MAPIAllocateMore@12
 MAPIDeinitIdle@0
+MAPIDeleteMail@20
+MAPIDetails@20
+MAPIFindNext@28
 MAPIFreeBuffer
 MAPIFreeBuffer@4
 MAPIGetDefaultMalloc@0
+MAPIGetNetscapeVersion@0
 MAPIInitIdle@4
 MAPIInitialize
 MAPIInitialize@4
+MAPILogoff@16
+MAPILogon@24
 MAPILogonEx
 MAPILogonEx@20
 MAPIOpenFormMgr
 MAPIOpenFormMgr@8
 MAPIOpenLocalFormContainer
 MAPIOpenLocalFormContainer@4
+MAPIReadMail@24
+MAPIResolveName@24
+MAPISaveMail@24
+MAPISendDocuments@20
 MAPISendMail
 MAPISendMail@20
 MAPIUninitialize
